--- a/quran_app/pubspec.yaml
+++ b/quran_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   flutter_bloc: ^9.1.1
+  circular_countdown_timer: ^0.2.4
 
 dev_dependencies:
   flutter_test:
